# dojo_1

./: .clang-format  .gitmodules  CMakeLists.txt
benchmark/: CMakeLists.txt  benchmark.cpp  task_1_benchmark.cpp  task_1_benchmark.cxx  task_2_benchmark.cpp  task_2_benchmark.cxx  task_3_benchmark.cxx  task_4_benchmark.cxx  task_5_benchmark.cxx
include/: task_1.hxx  task_2.hxx  task_3.hxx  task_4.hxx  task_5.hxx
src/: CMakeLists.txt  main.cxx  task_1.cxx  task_2.cxx  task_3.cxx  task_4.cxx  task_5.cxx
test/: CMakeLists.txt  task_1_unittest.cpp  task_1_unittest.cxx  task_2_unittest.cpp  task_2_unittest.cxx  task_3_unittest.cxx  task_4_unittest.cpp  task_4_unittest.cxx  task_5_unittest.cxx  unittest.cpp
